crates/kply-core/src/snapshots/kply_core__manifest__tests__generated_sandbox_manifest_bundle.snap
---
source: crates/kply-core/src/manifest.rs
expression: manifests
---
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "annotations": {
        "kply.dev/image": "registry.example.com/checkout/api:v2",
        "kply.dev/route-strategy": "header",
        "kply.dev/workload": "checkout/Deployment/checkout-api"
      },
      "labels": {
        "app.kubernetes.io/component": "api",
        "kply.dev/app": "checkout",
        "kply.dev/managed-by": "kply",
        "kply.dev/session-id": "session-123",
        "kply.dev/session-name": "checkout-test"
      },
      "name": "session-123-workload",
      "namespace": "checkout"
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "app.kubernetes.io/component": "api",
          "kply.dev/app": "checkout",
          "kply.dev/managed-by": "kply",
          "kply.dev/session-id": "session-123",
          "kply.dev/session-name": "checkout-test"
        }
      },
      "template": {
        "metadata": {
          "annotations": {
            "kply.dev/image": "registry.example.com/checkout/api:v2",
            "kply.dev/route-strategy": "header",
            "kply.dev/workload": "checkout/Deployment/checkout-api"
          },
          "labels": {
            "app.kubernetes.io/component": "api",
            "kply.dev/app": "checkout",
            "kply.dev/managed-by": "kply",
            "kply.dev/session-id": "session-123",
            "kply.dev/session-name": "checkout-test"
          }
        },
        "spec": {
          "containers": [
            {
              "image": "registry.example.com/checkout/api:v2",
              "name": "checkout-test"
            }
          ]
        }
      }
    }
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "kply.dev/image": "registry.example.com/checkout/api:v2",
        "kply.dev/route-strategy": "header",
        "kply.dev/workload": "checkout/Deployment/checkout-api"
      },
      "labels": {
        "app.kubernetes.io/component": "api",
        "kply.dev/app": "checkout",
        "kply.dev/managed-by": "kply",
        "kply.dev/session-id": "session-123",
        "kply.dev/session-name": "checkout-test"
      },
      "name": "session-123-service",
      "namespace": "checkout"
    },
    "spec": {
      "ports": [
        {
          "name": "http",
          "port": 80,
          "targetPort": 80
        }
      ],
      "selector": {
        "app.kubernetes.io/component": "api",
        "kply.dev/app": "checkout",
        "kply.dev/managed-by": "kply",
        "kply.dev/session-id": "session-123",
        "kply.dev/session-name": "checkout-test"
      }
    }
  },
  {
    "apiVersion": "v1",
    "data": {
      "kply.dev/header-name": "x-kply-session",
      "kply.dev/header-value": "session-123",
      "kply.dev/placeholder-kind": "HTTPRoute",
      "kply.dev/route-resource": "checkout/HTTPRoute/session-123-route",
      "kply.dev/selector-kind": "header",
      "kply.dev/service-resource": "checkout/Service/session-123-service"
    },
    "kind": "ConfigMap",
    "metadata": {
      "annotations": {
        "kply.dev/image": "registry.example.com/checkout/api:v2",
        "kply.dev/route-strategy": "header",
        "kply.dev/workload": "checkout/Deployment/checkout-api"
      },
      "labels": {
        "app.kubernetes.io/component": "api",
        "kply.dev/app": "checkout",
        "kply.dev/managed-by": "kply",
        "kply.dev/session-id": "session-123",
        "kply.dev/session-name": "checkout-test"
      },
      "name": "session-123-route",
      "namespace": "checkout"
    }
  }
]
