crates/kply-core/src/snapshots/kply_core__manifest__tests__sandbox_cleanup_selector.snap
---
source: crates/kply-core/src/manifest.rs
expression: value
---
{
  "matchLabels": {
    "kply.dev/managed-by": "kply",
    "kply.dev/session-id": "session-123"
  }
}
