crates/kply-core/src/snapshots/kply_core__manifest__tests__sandbox_deployment_manifest.snap
---
source: crates/kply-core/src/manifest.rs
expression: value
---
{
  "apiVersion": "apps/v1",
  "kind": "Deployment",
  "metadata": {
    "annotations": {
      "kply.dev/image": "registry.example.com/checkout/api:v2",
      "kply.dev/route-strategy": "header",
      "kply.dev/workload": "checkout/Deployment/checkout-api"
    },
    "labels": {
      "app.kubernetes.io/component": "api",
      "kply.dev/app": "checkout",
      "kply.dev/managed-by": "kply",
      "kply.dev/session-id": "session-123",
      "kply.dev/session-name": "checkout-test"
    },
    "name": "session-123-workload",
    "namespace": "checkout"
  },
  "spec": {
    "replicas": 1,
    "selector": {
      "matchLabels": {
        "app.kubernetes.io/component": "api",
        "kply.dev/app": "checkout",
        "kply.dev/managed-by": "kply",
        "kply.dev/session-id": "session-123",
        "kply.dev/session-name": "checkout-test"
      }
    },
    "template": {
      "metadata": {
        "annotations": {
          "kply.dev/image": "registry.example.com/checkout/api:v2",
          "kply.dev/route-strategy": "header",
          "kply.dev/workload": "checkout/Deployment/checkout-api"
        },
        "labels": {
          "app.kubernetes.io/component": "api",
          "kply.dev/app": "checkout",
          "kply.dev/managed-by": "kply",
          "kply.dev/session-id": "session-123",
          "kply.dev/session-name": "checkout-test"
        }
      },
      "spec": {
        "containers": [
          {
            "image": "registry.example.com/checkout/api:v2",
            "name": "checkout-test"
          }
        ]
      }
    }
  }
}
