crates/kply-core/src/snapshots/kply_core__manifest__tests__sandbox_service_manifest_with_explicit_port.snap
---
source: crates/kply-core/src/manifest.rs
expression: value
---
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "annotations": {
      "kply.dev/image": "registry.example.com/checkout/api:v2",
      "kply.dev/route-strategy": "header",
      "kply.dev/workload": "checkout/Deployment/checkout-api"
    },
    "labels": {
      "app.kubernetes.io/component": "api",
      "kply.dev/app": "checkout",
      "kply.dev/managed-by": "kply",
      "kply.dev/session-id": "session-123",
      "kply.dev/session-name": "checkout-test"
    },
    "name": "session-123-service",
    "namespace": "checkout"
  },
  "spec": {
    "ports": [
      {
        "name": "https",
        "port": 443,
        "targetPort": 8443
      }
    ],
    "selector": {
      "app.kubernetes.io/component": "api",
      "kply.dev/app": "checkout",
      "kply.dev/managed-by": "kply",
      "kply.dev/session-id": "session-123",
      "kply.dev/session-name": "checkout-test"
    }
  }
}
